--- a/iMage/pom.xml
+++ b/iMage/pom.xml
@@ -18,4 +18,7 @@
 			<url>http://bob.ipd.kit.edu/nexus/repository/maven-public-all/</url>
 		</repository>
 	</repositories>
+	<modules>
+		<module>jmjrst.main</module>
+	</modules>
 </project>
