Created new module iMage.HDrize-cli

--- a/iMage/pom.xml
+++ b/iMage/pom.xml
@@ -21,5 +21,7 @@
 	<modules>
 		<module>jmjrst.main</module>
 		<module>iMage.HDrize</module>
+		
+		<module>iMage.HDrize-cli</module>
 	</modules>
 </project>
