--- a/iMage/iMage.HDrize-cli/pom.xml
+++ b/iMage/iMage.HDrize-cli/pom.xml
@@ -45,8 +45,8 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>swt1</groupId>
-			<artifactId>iMage.HDrize</artifactId>
+			<groupId>swt1.ub2.a4</groupId>
+			<artifactId>2219041</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -54,4 +54,5 @@
 			<artifactId>commons-cli</artifactId>
 		</dependency>
 	</dependencies>
+	<groupId>swt1.ub2.a5</groupId>
 </project>
