--- a/iMage/iMage.HDrize/pom.xml
+++ b/iMage/iMage.HDrize/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>iMage.HDrize</artifactId>
+    <artifactId>2219041</artifactId>
     <dependencies>
         <dependency>
             <groupId>swt1</groupId>
@@ -22,4 +22,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+    <groupId>swt1.ub2.a4</groupId>
 </project>
