Action listener works for Start Plug-In and Configure Plug-In now.

--- a/iMage/iMage.Instagrim-plugin/pom.xml
+++ b/iMage/iMage.Instagrim-plugin/pom.xml
@@ -14,6 +14,10 @@
 			<artifactId>jmjrst.main</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+  			<groupId>org.kohsuke.metainf-services</groupId>
+  			<artifactId>metainf-services</artifactId>
+ 			 <optional>true</optional>
+		</dependency>
 	</dependencies>
-	<groupId>swt1</groupId>
 </project>
