Fixed broken icons. Created module iMage.bundle which bundles all modules

--- a/iMage/iMage.Instagrim-plugin/pom.xml
+++ b/iMage/iMage.Instagrim-plugin/pom.xml
@@ -7,7 +7,6 @@
 		<artifactId>iMage</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>iMage.Instagrim-plugin</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>swt1</groupId>
@@ -20,4 +19,6 @@
  			 <optional>true</optional>
 		</dependency>
 	</dependencies>
+	<artifactId>iMage.InstagrimPlugin</artifactId>
+	<groupId>swt1</groupId>
 </project>
