--- a/iMage/pom.xml
+++ b/iMage/pom.xml
@@ -23,5 +23,6 @@
         <module>iMage.HDrize</module>
         <module>iMage.HDrize-cli</module>
         <module>iMage.Instagrim-plugin</module>
+        <module>iMage.bundle</module>
     </modules>
 </project>
