Created new module iMage.iCatcher

--- a/iMage/pom.xml
+++ b/iMage/pom.xml
@@ -24,5 +24,6 @@
         <module>iMage.HDrize-cli</module>
         <module>iMage.Instagrim-plugin</module>
         <module>iMage.bundle</module>
+        <module>iMage.iCatcher</module>
     </modules>
 </project>
